[gd_scene load_steps=4 format=4 uid="uid://b3k4k5m6n7o8p"]

[ext_resource type="Texture2D" uid="uid://0vfpldb6tnv" path="res://assets/sprites/cassette_ui.png" id="1_cassette"]
[ext_resource type="FontFile" uid="uid://2xooklkyoude" path="res://assets/fonts/Jersey15-Regular.ttf" id="2_font"]
[ext_resource type="Script" uid="uid://by6qcik8hoitq" path="res://scripts/cassette_ui.gd" id="3_script"]

[node name="CassetteUI" type="Control"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 120.0
script = ExtResource("3_script")

[node name="Background" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("1_cassette")

[node name="ContentContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 15.0
offset_right = -20.0
offset_bottom = -15.0

[node name="TitleLabel" type="Label" parent="ContentContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 1)
text = "CASSETTE INFO"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="ContentContainer"]
layout_mode = 2
theme_override_colors/separator = Color(0.3, 0.3, 0.3, 0.5)

[node name="InfoContainer" type="VBoxContainer" parent="ContentContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="InfoLabel" type="RichTextLabel" parent="ContentContainer/InfoContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("2_font")
theme_override_font_sizes/normal_font_size = 12
theme_override_colors/default_color = Color(0.1, 0.1, 0.1, 1)
bbcode_enabled = true
text = "[b]Health:[/b] 100/100
[b]Score:[/b] 0
[b]Level:[/b] 1"
fit_content = true

[node name="CloseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -25.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = 25.0
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 12
text = "Ã—"
